Cheat sheets: Corrected to display on one page.  The new buttons pushed content down and required a scrollbar.

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -150,6 +150,11 @@ pre code {
     margin: 6mm;
   }
 
+  .topbar {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
   /* Hide navigation in print */
   .nav {
     display: none !important;
